added means to start a new game

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="button-container">
-        <button value="9">9x9</button>
+        <button class="new-game">New Game</button>
     </div>
     <div class="gameBoard">
         
